@@ -2,6 +2,7 @@
 
   * (position) add object-fit classes
   * (type) white-space
+  * (type) overflow-wrap: break-word;
 
 # 0.13.2 (2020-11-19)
 
